# gkr-backend

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  clippy.toml  rust-toolchain.toml  test_assoc
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: lints.yml  tests.yml
crates/curves/: Cargo.toml  README.md
crates/curves/src/: lib.rs  params.rs  polynomial.rs  scalar_mul.rs  utils.rs
crates/curves/src/edwards/: ed25519.rs  mod.rs
crates/curves/src/weierstrass/: bls12_381.rs  bn254.rs  mod.rs  secp256k1.rs  secp256r1.rs
crates/ff_ext/: Cargo.toml
crates/ff_ext/src/: babybear.rs  goldilock.rs  lib.rs  poseidon.rs  wrapper.rs
crates/mpcs/: Cargo.toml
crates/mpcs/benches/: basefold.rs  comparison.rs  interpolate.rs  jagged_pcs.rs  jagged_sumcheck.rs  rscode.rs  whir.rs
crates/mpcs/src/: basefold.rs  jagged.rs  jagged_evaluator.rs  jagged_sumcheck_plan.md  lib.rs  util.rs  whir.rs
crates/mpcs/src/basefold/: commit_phase.rs  encoding.rs  query_phase.rs  structure.rs
crates/mpcs/src/basefold/encoding/: rs.rs
crates/mpcs/src/jagged/: assist.rs  evaluator.rs  mod.rs  sumcheck.rs  types.rs
crates/mpcs/src/util/: arithmetic.rs  hash.rs  merkle_tree.rs
crates/mpcs/src/util/arithmetic/: hypercube.rs
crates/mpcs/src/whir/: spec.rs  structure.rs
crates/multilinear_extensions/: Cargo.toml
crates/multilinear_extensions/benches/: eq.rs
crates/multilinear_extensions/src/: expression.rs  lib.rs  mle.rs  smart_slice.rs  test.rs  util.rs  virtual_poly.rs  virtual_polys.rs
crates/multilinear_extensions/src/expression/: monomial.rs  utils.rs
crates/p3/: Cargo.toml
crates/p3/src/: lib.rs
crates/poseidon/: Cargo.toml
crates/poseidon/src/: challenger.rs  constants.rs  digest.rs  lib.rs
crates/sumcheck/: Cargo.toml
crates/sumcheck/benches/: ceno_batched_main.rs  devirgo_sumcheck.rs  memory_usage.rs
crates/sumcheck/src/: extrapolate.rs  front_loaded.rs  frontload.rs  frontloaded.rs  lib.rs  prover.rs  structs.rs  test.rs  util.rs  verifier.rs
crates/sumcheck_macro/: Cargo.toml
crates/sumcheck_macro/examples/: expand.rs
crates/sumcheck_macro/src/: lib.rs
crates/transcript/: Cargo.toml
crates/transcript/src/: basic.rs  lib.rs
crates/whir/: Cargo.toml
crates/whir/src/: domain.rs  error.rs  lib.rs  parameters.rs  utils.rs
crates/whir/src/crypto/: mod.rs
crates/whir/src/ntt/: matrix_skip.rs  mod.rs  ntt_impl.rs  transpose.rs  utils.rs  wavelet.rs
crates/whir/src/sumcheck/: mod.rs  proof.rs  prover_batched.rs  prover_core.rs  prover_not_skipping.rs  prover_not_skipping_batched.rs  prover_single.rs
crates/whir/src/whir/: committer.rs  fold.rs  fs_utils.rs  mod.rs  parameters.rs  prover.rs  verifier.rs
crates/whir/src/whir/batch/: committer.rs  prover.rs  utils.rs  verifier.rs
crates/witness/: Cargo.toml
crates/witness/src/: lib.rs
docs/: jagged-multi-set-design.md
