[workspace]
members = [
  "crates/mpcs",
  "crates/multilinear_extensions",
  "crates/sumcheck_macro",
  "crates/poseidon",
  "crates/sumcheck",
  "crates/transcript",
  "crates/witness",
  "crates/p3",
  "crates/ff_ext",
]
resolver = "2"

[workspace.package]
categories = ["cryptography", "zk", "blockchain", "gkr-backend"]
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "gkr-backend"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scroll-tech/gkr-backend"
version = "0.1.0"

[workspace.dependencies]
ff_ext = { path = "crates/ff_ext", default-features = false }
mpcs = { path = "crates/mpcs", default-features = false }
multilinear_extensions = { path = "crates/multilinear_extensions", default-features = false }
p3 = { path = "crates/p3", default-features = false }
sumcheck = { path = "crates/sumcheck", default-features = false }
poseidon = { path = "crates/poseidon", default-features = false }
sumcheck_macro = { path = "crates/sumcheck_macro", default-features = false }
transcript = { path = "crates/transcript", default-features = false }
witness = { path = "crates/witness", default-features = false }

anyhow = { version = "1.0", default-features = false }
bincode = "1"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
either = { version = "1.15.*", features = ["serde"] }
itertools = "0.13"
ndarray = "*"
num-bigint = { version = "0.4.6" }
num-derive = "0.4"
num-traits = "0.2"
p3-baby-bear = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-challenger = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-commit = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-dft = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-field = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-fri = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-goldilocks = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-matrix = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-mds = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-merkle-tree = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-poseidon = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-poseidon2 = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-symmetric = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
p3-util = { git = "https://github.com/Plonky3/plonky3", rev = "1ba4e5c" }
paste = "1"
pprof2 = { version = "0.13", features = ["flamegraph"] }
prettytable-rs = "^0.10"
proptest = "1"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_core = "0.6"
rayon = "1.10"
rkyv = { version = "0.8", features = ["pointer_width_32"] }
secp = "0.4.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
substrate-bn = { version = "0.6.0" }
thiserror = "1" # do we need this?
thread_local = "1.1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tracing = { version = "0.1", features = [
  "attributes",
] }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uint = "0.8"

[profile.dev]
lto = "thin"
# We are running our tests with optimizations turned on to make them faster.
# Please turn optimizations off, when you want accurate stack traces for debugging.
opt-level = 2

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
lto = "thin"
