[package]
categories.workspace = true
description = "Multilinear Polynomial Commitment Scheme"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "mpcs"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bincode = "1.3.3"
clap.workspace = true
ff_ext.workspace = true
itertools.workspace = true
whir = { workspace = true, optional = true }
multilinear_extensions.workspace = true
num-integer = "0.1"
p3.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
sumcheck.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
transcript.workspace = true
witness.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
nightly-features = ["ff_ext/nightly-features"]
parallel = ["p3/parallel", "dep:rayon"]
whir = ["dep:whir"]
print-trace = ["whir/print-trace"]
sanity-check = []

[[bench]]
harness = false
name = "basefold"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "whir"
