[package]
categories.workspace = true
description = "Multilinear extensions for the Ceno project"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "multilinear_extensions"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
either.workspace = true
ff_ext.workspace = true
itertools.workspace = true
p3.workspace = true
p3-maybe-rayon.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
env_logger = "0.11"
log = "0.4"
serde_json.workspace = true

[features]
nightly-features = ["p3/nightly-features", "ff_ext/nightly-features"]
parallel = ["p3-maybe-rayon/parallel"]

[[bench]]
harness = false
name = "eq"
