[package]
categories.workspace = true
description = "Poseidon hash function"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "poseidon"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext.workspace = true
p3.workspace = true
serde.workspace = true

[dev-dependencies]
rand.workspace = true

[features]
nightly-features = ["p3/nightly-features", "ff_ext/nightly-features"]
