[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
either.workspace = true
ff_ext.workspace = true
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = [
  "parallel",
] }
p3.workspace = true
rayon.workspace = true
serde.workspace = true
sumcheck_macro = { path = "../sumcheck_macro" }
thiserror.workspace = true
tracing.workspace = true
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true
p3-goldilocks.workspace = true
poseidon.workspace = true
rand.workspace = true

[features]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "multilinear_extensions/nightly-features",
  "sumcheck_macro/nightly-features",
  "transcript/nightly-features",
]

[[bench]]
harness = false
name = "devirgo_sumcheck"
