[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
either.workspace = true
ff_ext.workspace = true
itertools.workspace = true
multilinear_extensions.workspace = true
p3.workspace = true
rayon.workspace = true
serde.workspace = true
sumcheck_macro.workspace = true
thiserror.workspace = true
tracing.workspace = true
transcript.workspace = true

[dev-dependencies]
criterion.workspace = true
p3-goldilocks.workspace = true
poseidon.workspace = true
rand.workspace = true

[features]
nightly-features = ["ff_ext/nightly-features"]
parallel = ["p3/parallel", "multilinear_extensions/parallel"]


[[bench]]
harness = false
name = "devirgo_sumcheck"
