[package]
categories.workspace = true
description = "Macros for the Ceno project"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck_macro"
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
itertools.workspace = true
p3.workspace = true
proc-macro2 = "1.0.92"
quote = "1.0"
rand.workspace = true
syn = { version = "2.0", features = ["full"] }

[features]
nightly-features = ["ff_ext/nightly-features"]

[dev-dependencies]
ff_ext.workspace = true
multilinear_extensions.workspace = true
sumcheck.workspace = true
