[package]
categories.workspace = true
description = "Transcript generation for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "transcript"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext.workspace = true
itertools.workspace = true
p3.workspace = true
poseidon.workspace = true

[features]
nightly-features = ["ff_ext/nightly-features"]
