[package]
categories = ["cryptography", "zk", "blockchain", "pcs"]
description = "Multilinear Polynomial Commitment Scheme"
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "pcs"]
license = "MIT OR Apache-2.0"
name = "whir"
readme = "README.md"
repository = "https://github.com/WizardOfMenlo/whir/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "main"

[dependencies]
bincode = "1.3.3"
clap.workspace = true
ff_ext.workspace = true
multilinear_extensions.workspace = true
p3.workspace = true
rand = "0.8"
rand_chacha = "0.3"
rayon = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
sumcheck.workspace = true
tracing.workspace = true
transcript.workspace = true
transpose = "0.2.3"
witness.workspace = true

derive_more = { version = "1.0.0", features = ["debug"] }
itertools = "0.14.0"

[features]
asm = []
default = ["parallel"]
nightly-features = ["ff_ext/nightly-features"]
parallel = ["sumcheck/parallel", "dep:rayon"]
print-trace = ["tracing/log"]
rayon = ["dep:rayon"]
