[package]
categories.workspace = true
description = "Witness for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "witness"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext.workspace = true
multilinear_extensions = { version = "0", path = "../multilinear_extensions" }
p3.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true

[features]
nightly-features = [
  "p3/nightly-features",
  "ff_ext/nightly-features",
  "multilinear_extensions/nightly-features",
]
