[package]
categories.workspace = true
description = "Witness for Ceno"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "witness"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff_ext.workspace = true
multilinear_extensions.workspace = true
p3.workspace = true
rand.workspace = true
rayon.workspace = true
tracing.workspace = true

[features]
nightly-features = ["ff_ext/nightly-features"]
